@@ -1,3 +1,9 @@
+2004-05-12  Mark Grondona <mgrondona@llnl.gov>
+	
+	* src/pdsh/dsh.c (_rcp_thread) : Generate error message and copy
+	any pending stderr data to user when _rcp_response() fails.
+	(gnats:433)
+
 2004-05-12  Albert Chu <chu11@llnl.gov>
 
 	* doc/pdcp.1.in: Added note that pdcp must be installed on remote
